--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <a href="#">Personal Website</a>
   <a href="#">Personal Siteplan</a>
 </nav>
+<p>Naledi Michaela Modige - WDD130</p>
     
 </body>
 </html>
