--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -9,9 +9,9 @@
 
 <body>
   <header>
-    <h1>[Whitestar Rafting] Site Plan</h1>
-    <h2>[Naledi Modige]</h2>
-    <h2>WDD 130-[A1]</h2>
+    <h1>Whitestar Rafting Site Plan</h1>
+    <h2>Naledi Modige</h2>
+    <h2>WDD 130-A1</h2>
     <!-- In the header above, add the name of your site, your name and class number. For example if you are in section 3 you would put WDD 130-03 -->
   </header>
   <main>
@@ -19,11 +19,11 @@
     <hr />
     <h2>Overview</h2>
     <h3>Purpose</h3>
-    <p>[To deliver quality services at your fingertips by helping you find great ways to unwind and relax while enjoying nature.]</p>
+    <p>To deliver quality services at your fingertips by helping you find great ways to unwind and relax while enjoying nature.</p>
     <!-- change this -->
 
     <h3>Audience</h3>
-    <p>[Adventurous people, people who love nature and enjoy outdoor activities]</p>
+    <p>Adventurous people, people who love nature and enjoy outdoor activities</p>
     <!-- change this -->
 
     <hr />
